# poc_regional_translation

./: .config.env  README.md  main.py  pyproject.toml
toi_translation/: app.py  lol.txt  settings.py
toi_translation/models/: gemini.py  language.py
toi_translation/routes/: translation.py
toi_translation/schemas/: status.py
toi_translation/scripts/: count.py  encode_text.py  with_prompt.py
toi_translation/text_files/gemini/: Wikipedia-01.txt  Wikipedia-02.txt
toi_translation/text_files/medium/: How To Wake Up at 5 A.M. Every Day.txt
toi_translation/text_files/times_of_india/: French competition watchdog hits Google with 250 million euro fine.en.txt  French competition watchdog hits Google with 250 million euro fine.fr.txt  French competition watchdog hits Google with 250 million euro fine.hi.txt  French competition watchdog hits Google with 250 million euro fine.ka.txt  French competition watchdog hits Google with 250 million euro fine.tl.txt  Hyderabad student ‘missing’ in US for 12 days, family gets call to pay $1,200 ransom.hi.txt  Hyderabad student ‘missing’ in US for 12 days, family gets call to pay $1,200 ransom.txt  PM Modi speaks to Russian president Vladimir Putin, discusses Ukraine.txt
toi_translation/text_files/wikipedia/: Wikipedia.txt
